# rustly

./: Cargo.toml  Rocket.toml
src/: main.rs
src/context/: mod.rs  shortcut.rs  shortener.rs
static/: styles.css
templates/: base.html.tera  index.html.tera
