[package]
name = "rustly"
version = "0.1.0"
authors = ["Kalyan Sriram <coder.kalyan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
serde = "1.0.101"
serde_json = "1.0.41"
serde_derive = "1.0.101"
harsh = "0.1.6"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["redis_pool", "tera_templates", "serve"]
